--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,22 +25,18 @@ jobs:
 
     - name: Test entrypoint script syntax
       run: |
-        # Test bash syntax
         bash -n entrypoint.sh
         echo "✓ entrypoint.sh syntax is valid"
-        
-        # Test if required files exist
         test -f Dockerfile || exit 1
         test -f entrypoint.sh || exit 1
         echo "✓ All required files present"
 
     - name: Test Dockerfile build
       run: |
-        # Test that Dockerfile can be built
         docker build -t cloudflare-ddns-test .
 
-  build:
-    name: Build Multi-Arch Docker Image
+  build-ghcr:
+    name: Build for GHCR (All Tags)
     runs-on: ubuntu-latest
     needs: test
     permissions:
@@ -53,12 +49,11 @@ jobs:
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
+      with:
+        platforms: arm64,arm,386,amd64,ppc64le
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-      with:
-        driver-opts: |
-          image=moby/buildkit:buildx-stable-1
 
     - name: Log in to GHCR
       uses: docker/login-action@v3
@@ -67,54 +62,51 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Extract metadata
-      id: meta
+    - name: Extract metadata for GHCR
+      id: meta-ghcr
       uses: docker/metadata-action@v5
       with:
-        images: |
-          ${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}
-          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}
+        images: ${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}
         tags: |
           type=ref,event=branch
           type=ref,event=tag
           type=sha
           type=raw,value=latest,enable={{is_default_branch}}
 
-    - name: Build and push to both registries
+    - name: Build and push to GHCR
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64,linux/386,linux/arm/v6,linux/arm/v7,linux/arm64
+        platforms: |
+          linux/386,
+          linux/amd64,
+          linux/arm/v6,
+          linux/arm/v7,
+          linux/arm64,
+          linux/ppc64le
         push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+        tags: ${{ steps.meta-ghcr.outputs.tags }}
+        labels: ${{ steps.meta-ghcr.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        build-args: |
-          BUILDKIT_INLINE_CACHE=1
 
-  verify:
-    name: Verify Multi-Arch Images
+  build-dockerhub:
+    name: Build for Docker Hub (Specific Tags)
     runs-on: ubuntu-latest
-    needs: build
-    if: always() && github.event_name != 'pull_request'
+    needs: test
+    if: github.event_name != 'pull_request'
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Log in to GHCR
-      uses: docker/login-action@v3
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
       with:
-        registry: ${{ env.REGISTRY_GHCR }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        platforms: arm64,arm,386,amd64,ppc64le
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
@@ -122,88 +114,174 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Verify GHCR images
+    - name: Build and push specific tags to Docker Hub
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        platforms: |
+          linux/386,
+          linux/amd64,
+          linux/arm/v6,
+          linux/arm/v7,
+          linux/arm64,
+          linux/ppc64le
+        push: true
+        tags: |
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:latest
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:386
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:x64
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:ppc64
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:armv7
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:arm
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+  verify:
+    name: Verify All Architectures
+    runs-on: ubuntu-latest
+    needs: [build-ghcr, build-dockerhub]
+    if: always() && github.event_name != 'pull_request'
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Verify Docker Hub tags and architectures
       run: |
-        echo "Verifying GHCR images..."
-        LATEST_TAG_GHCR="${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}:latest"
+        # Define tags to verify
+        tags=("latest" "386" "x64" "ppc64" "armv7" "arm")
         
-        architectures=("amd64" "386" "arm" "arm64")
-        platforms=("linux/amd64" "linux/386" "linux/arm/v7" "linux/arm64")
-        
-        for i in "${!architectures[@]}"; do
-          arch=${architectures[$i]}
-          platform=${platforms[$i]}
+        # Define platform mapping for each tag
+        declare -A tag_platforms=(
+          ["latest"]="linux/amd64"
+          ["386"]="linux/386"
+          ["x64"]="linux/amd64"
+          ["ppc64"]="linux/ppc64le"
+          ["armv7"]="linux/arm/v7"
+          ["arm"]="linux/arm/v7"
+        )
+
+        declare -A expected_arch=(
+          ["latest"]="amd64"
+          ["386"]="386"
+          ["x64"]="amd64"
+          ["ppc64"]="ppc64le"
+          ["armv7"]="arm"
+          ["arm"]="arm"
+        )
+
+        for tag in "${tags[@]}"; do
+          echo "=== Verifying tag: $tag ==="
+          IMAGE_TAG="${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:${tag}"
+          platform="${tag_platforms[$tag]}"
+          expected="${expected_arch[$tag]}"
           
-          echo "Verifying GHCR $arch architecture ($platform)..."
-          docker pull --platform $platform $LATEST_TAG_GHCR
-          ARCH_RESULT=$(docker image inspect $LATEST_TAG_GHCR --format='{{.Architecture}}')
-          echo "✓ GHCR $arch: $ARCH_RESULT"
+          echo "🔍 Testing $IMAGE_TAG on platform $platform..."
+          
+          if docker pull --platform "$platform" "$IMAGE_TAG"; then
+            # Verify architecture
+            ARCH_RESULT=$(docker image inspect "$IMAGE_TAG" --format='{{.Architecture}}')
+            OS_RESULT=$(docker image inspect "$IMAGE_TAG" --format='{{.Os}}')
+            
+            if [ "$ARCH_RESULT" == "$expected" ]; then
+              echo "✅ $tag: Architecture=$ARCH_RESULT (expected: $expected), OS=$OS_RESULT"
+            else
+              echo "❌ Architecture mismatch for $tag: got $ARCH_RESULT, expected $expected"
+              exit 1
+            fi
+          else
+            echo "❌ Failed to pull $tag from Docker Hub"
+            exit 1
+          fi
+          echo ""
         done
 
-    - name: Verify Docker Hub images
+    - name: Verify no commit tags exist in Docker Hub
       run: |
-        echo "Verifying Docker Hub images..."
-        LATEST_TAG_DOCKERHUB="${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:latest"
-        
-        architectures=("amd64" "386" "arm" "arm64")
-        platforms=("linux/amd64" "linux/386" "linux/arm/v7" "linux/arm64")
-        
-        for i in "${!architectures[@]}"; do
-          arch=${architectures[$i]}
-          platform=${platforms[$i]}
-          
-          echo "Verifying Docker Hub $arch architecture ($platform)..."
-          docker pull --platform $platform $LATEST_TAG_DOCKERHUB
-          ARCH_RESULT=$(docker image inspect $LATEST_TAG_DOCKERHUB --format='{{.Architecture}}')
-          echo "✓ Docker Hub $arch: $ARCH_RESULT"
-        done
-
-    - name: Test container startup
-      run: |
-        # Test both registries
-        LATEST_TAG_GHCR="${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}:latest"
-        LATEST_TAG_DOCKERHUB="${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:latest"
-        
-        echo "Testing GHCR image startup..."
-        docker run --rm --platform linux/amd64 $LATEST_TAG_GHCR echo "GHCR test successful" || true
-        
-        echo "Testing Docker Hub image startup..."
-        docker run --rm --platform linux/amd64 $LATEST_TAG_DOCKERHUB echo "Docker Hub test successful" || true
+        # This should fail if commit tags exist (which is what we want)
+        set +e
+        docker pull ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:sha-0000000 2>/dev/null
+        if [ $? -eq 0 ]; then
+          echo "❌ Commit tags should not exist in Docker Hub"
+          exit 1
+        else
+          echo "✅ No commit tags found in Docker Hub (as expected)"
+        fi
+        set -e
 
   scan:
     name: Security Scan
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build-ghcr, build-dockerhub]
     if: always()
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Run Trivy vulnerability scanner on GHCR image
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: ${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}:latest
-        format: 'sarif'
-        output: 'trivy-results-ghcr.sarif'
+    - name: Run Trivy on Docker Hub images
+      run: |
+        # Scan main Docker Hub tags
+        TAGS=("latest" "386" "x64" "armv7")
+        
+        for tag in "${TAGS[@]}"; do
+          echo "Scanning tag: $tag"
+          docker run --rm aquasec/trivy:latest image \
+            --format table \
+            ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:$tag
+        done
 
-    - name: Run Trivy vulnerability scanner on Docker Hub image
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:latest
-        format: 'sarif'
-        output: 'trivy-results-dockerhub.sarif'
+  manifest:
+    name: Create Architecture-Specific Manifests
+    runs-on: ubuntu-latest
+    needs: build-dockerhub
+    if: always() && github.event_name != 'pull_request'
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v3
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
       with:
-        sarif_file: 'trivy-results-ghcr.sarif'
-      if: always()
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Create architecture-specific manifests
+      run: |
+        # Create manifest for each architecture tag
+        docker manifest create ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:386 \
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:386
+        
+        docker manifest create ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:x64 \
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:x64
+        
+        docker manifest create ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:ppc64 \
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:ppc64
+        
+        docker manifest create ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:armv7 \
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:armv7
+        
+        docker manifest create ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:arm \
+          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:arm
+
+        # Push manifests
+        docker manifest push ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:386
+        docker manifest push ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:x64
+        docker manifest push ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:ppc64
+        docker manifest push ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:armv7
+        docker manifest push ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:arm
 
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [build, verify]
+    needs: [build-ghcr, build-dockerhub, verify]
     if: startsWith(github.ref, 'refs/tags/')
     
     steps:
@@ -223,17 +301,29 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  notify:
-    name: Notify Success
+  summary:
+    name: Build Summary
     runs-on: ubuntu-latest
-    needs: [build, verify, scan]
-    if: success() && github.event_name != 'pull_request'
+    needs: [build-ghcr, build-dockerhub, verify, scan]
+    if: always() && github.event_name != 'pull_request'
     
     steps:
-    - name: Notify workflow completion
+    - name: Build Summary
       run: |
-        echo "🎉 Multi-arch build completed successfully!"
-        echo "📦 Images pushed to:"
-        echo "   - GHCR: ${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}:latest"
-        echo "   - Docker Hub: ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:latest"
-        echo "🏗️  Supported architectures: amd64, 386, arm/v6, arm/v7, arm64"
+        echo "🎉 Multi-architecture build completed!"
+        echo ""
+        echo "📦 Docker Hub Tags Available:"
+        echo "   • garfieldwtf/cloudflare-ddns:latest    (multi-arch)"
+        echo "   • garfieldwtf/cloudflare-ddns:386       (32-bit Intel/AMD)"
+        echo "   • garfieldwtf/cloudflare-ddns:x64       (64-bit Intel/AMD)" 
+        echo "   • garfieldwtf/cloudflare-ddns:ppc64     (PowerPC 64-bit)"
+        echo "   • garfieldwtf/cloudflare-ddns:armv7     (ARMv7 devices)"
+        echo "   • garfieldwtf/cloudflare-ddns:arm       (ARMv7 alias)"
+        echo ""
+        echo "🏗️ GHCR Tags Available:"
+        echo "   • All tags including commits and branches"
+        echo ""
+        echo "🔍 Usage Examples:"
+        echo "   docker pull garfieldwtf/cloudflare-ddns:386"
+        echo "   docker pull garfieldwtf/cloudflare-ddns:ppc64"
+        echo "   docker run --platform linux/386 garfieldwtf/cloudflare-ddns:386"
