--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Build and Push Multi-Arch to GHCR and Docker Hub
+name: Build and Push Multi-Arch to GHCR, Docker Hub, and Quay.io
 
 on:
   push:
@@ -11,8 +11,10 @@ on:
 env:
   REGISTRY_GHCR: ghcr.io
   REGISTRY_DOCKERHUB: docker.io
+  REGISTRY_QUAY: quay.io
   IMAGE_NAME: ${{ github.repository }}
   DOCKERHUB_IMAGE_NAME: garfieldwtf/cloudflare-ddns
+  QUAY_IMAGE_NAME: garfieldwtf/cloudflare-ddns
 
 jobs:
   test:
@@ -90,8 +92,8 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
-  build-dockerhub:
-    name: Build for Docker Hub (Specific Tags)
+  build-dockerhub-quay:
+    name: Build for Docker Hub and Quay.io (Specific Tags)
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name != 'pull_request'
@@ -114,7 +116,14 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push specific tags to Docker Hub
+    - name: Log in to Quay.io
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY_QUAY }}
+        username: ${{ secrets.QUAY_USERNAME }}
+        password: ${{ secrets.QUAY_TOKEN }}
+
+    - name: Build and push specific tags to both registries
       uses: docker/build-push-action@v5
       with:
         context: .
@@ -127,19 +136,28 @@ jobs:
           linux/ppc64le
         push: true
         tags: |
+          # Docker Hub tags
           ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:latest
           ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:386
           ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:x64
           ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:ppc64
           ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:armv7
           ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:arm
+          
+          # Quay.io tags (same structure)
+          ${{ env.REGISTRY_QUAY }}/${{ env.QUAY_IMAGE_NAME }}:latest
+          ${{ env.REGISTRY_QUAY }}/${{ env.QUAY_IMAGE_NAME }}:386
+          ${{ env.REGISTRY_QUAY }}/${{ env.QUAY_IMAGE_NAME }}:x64
+          ${{ env.REGISTRY_QUAY }}/${{ env.QUAY_IMAGE_NAME }}:ppc64
+          ${{ env.REGISTRY_QUAY }}/${{ env.QUAY_IMAGE_NAME }}:armv7
+          ${{ env.REGISTRY_QUAY }}/${{ env.QUAY_IMAGE_NAME }}:arm
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
   verify:
-    name: Verify All Architectures
+    name: Verify All Registries and Architectures
     runs-on: ubuntu-latest
-    needs: [build-ghcr, build-dockerhub]
+    needs: [build-ghcr, build-dockerhub-quay]
     if: always() && github.event_name != 'pull_request'
     
     steps:
@@ -152,7 +170,14 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Verify Docker Hub tags and architectures
+    - name: Log in to Quay.io
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY_QUAY }}
+        username: ${{ secrets.QUAY_USERNAME }}
+        password: ${{ secrets.QUAY_TOKEN }}
+
+    - name: Verify all registries and tags
       run: |
         # Define tags to verify
         tags=("latest" "386" "x64" "ppc64" "armv7" "arm")
@@ -176,36 +201,48 @@ jobs:
           ["arm"]="arm"
         )
 
-        for tag in "${tags[@]}"; do
-          echo "=== Verifying tag: $tag ==="
-          IMAGE_TAG="${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:${tag}"
-          platform="${tag_platforms[$tag]}"
-          expected="${expected_arch[$tag]}"
+        # Registries to verify
+        registries=(
+          ["dockerhub"]="${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}"
+          ["quay"]="${{ env.REGISTRY_QUAY }}/${{ env.QUAY_IMAGE_NAME }}"
+        )
+
+        for registry_name in "${!registries[@]}"; do
+          registry_base="${registries[$registry_name]}"
+          echo "=== Verifying registry: $registry_name ==="
           
-          echo "🔍 Testing $IMAGE_TAG on platform $platform..."
-          
-          if docker pull --platform "$platform" "$IMAGE_TAG"; then
-            # Verify architecture
-            ARCH_RESULT=$(docker image inspect "$IMAGE_TAG" --format='{{.Architecture}}')
-            OS_RESULT=$(docker image inspect "$IMAGE_TAG" --format='{{.Os}}')
+          for tag in "${tags[@]}"; do
+            IMAGE_TAG="${registry_base}:${tag}"
+            platform="${tag_platforms[$tag]}"
+            expected="${expected_arch[$tag]}"
             
-            if [ "$ARCH_RESULT" == "$expected" ]; then
-              echo "✅ $tag: Architecture=$ARCH_RESULT (expected: $expected), OS=$OS_RESULT"
+            echo "🔍 Testing $IMAGE_TAG on platform $platform..."
+            
+            if docker pull --platform "$platform" "$IMAGE_TAG"; then
+              # Verify architecture
+              ARCH_RESULT=$(docker image inspect "$IMAGE_TAG" --format='{{.Architecture}}')
+              OS_RESULT=$(docker image inspect "$IMAGE_TAG" --format='{{.Os}}')
+              
+              if [ "$ARCH_RESULT" == "$expected" ]; then
+                echo "✅ $registry_name/$tag: Architecture=$ARCH_RESULT (expected: $expected), OS=$OS_RESULT"
+              else
+                echo "❌ Architecture mismatch for $registry_name/$tag: got $ARCH_RESULT, expected $expected"
+                exit 1
+              fi
             else
-              echo "❌ Architecture mismatch for $tag: got $ARCH_RESULT, expected $expected"
+              echo "❌ Failed to pull $tag from $registry_name"
               exit 1
             fi
-          else
-            echo "❌ Failed to pull $tag from Docker Hub"
-            exit 1
-          fi
-          echo ""
+            echo ""
+          done
         done
 
-    - name: Verify no commit tags exist in Docker Hub
+    - name: Verify no commit tags exist in Docker Hub or Quay.io
       run: |
-        # This should fail if commit tags exist (which is what we want)
+        # Test that commit tags don't exist in Docker Hub or Quay.io
         set +e
+        
+        # Docker Hub
         docker pull ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:sha-0000000 2>/dev/null
         if [ $? -eq 0 ]; then
           echo "❌ Commit tags should not exist in Docker Hub"
@@ -213,34 +250,50 @@ jobs:
         else
           echo "✅ No commit tags found in Docker Hub (as expected)"
         fi
+        
+        # Quay.io
+        docker pull ${{ env.REGISTRY_QUAY }}/${{ env.QUAY_IMAGE_NAME }}:sha-0000000 2>/dev/null
+        if [ $? -eq 0 ]; then
+          echo "❌ Commit tags should not exist in Quay.io"
+          exit 1
+        else
+          echo "✅ No commit tags found in Quay.io (as expected)"
+        fi
+        
         set -e
 
   scan:
     name: Security Scan
     runs-on: ubuntu-latest
-    needs: [build-ghcr, build-dockerhub]
+    needs: [build-ghcr, build-dockerhub-quay]
     if: always()
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Run Trivy on Docker Hub images
+    - name: Run Trivy on all registry images
       run: |
-        # Scan main Docker Hub tags
+        # Scan main tags from all registries
         TAGS=("latest" "386" "x64" "armv7")
+        REGISTRIES=(
+          "${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}"
+          "${{ env.REGISTRY_QUAY }}/${{ env.QUAY_IMAGE_NAME }}"
+        )
         
-        for tag in "${TAGS[@]}"; do
-          echo "Scanning tag: $tag"
-          docker run --rm aquasec/trivy:latest image \
-            --format table \
-            ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:$tag
+        for registry in "${REGISTRIES[@]}"; do
+          for tag in "${TAGS[@]}"; do
+            echo "Scanning: $registry:$tag"
+            docker run --rm aquasec/trivy:latest image \
+              --format table \
+              "${registry}:${tag}" || echo "Scan completed for ${registry}:${tag}"
+          done
         done
 
   manifest:
     name: Create Architecture-Specific Manifests
     runs-on: ubuntu-latest
-    needs: build-dockerhub
+    needs: build-dockerhub-quay
     if: always() && github.event_name != 'pull_request'
     
     steps:
@@ -253,35 +306,54 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Create architecture-specific manifests
-      run: |
-        # Create manifest for each architecture tag
-        docker manifest create ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:386 \
-          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:386
-        
-        docker manifest create ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:x64 \
-          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:x64
-        
-        docker manifest create ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:ppc64 \
-          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:ppc64
-        
-        docker manifest create ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:armv7 \
-          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:armv7
-        
-        docker manifest create ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:arm \
-          ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:arm
+    - name: Log in to Quay.io
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY_QUAY }}
+        username: ${{ secrets.QUAY_USERNAME }}
+        password: ${{ secrets.QUAY_TOKEN }}
 
-        # Push manifests
-        docker manifest push ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:386
-        docker manifest push ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:x64
-        docker manifest push ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:ppc64
-        docker manifest push ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:armv7
-        docker manifest push ${{ env.REGISTRY_DOCKERHUB }}/${{ env.DOCKERHUB_IMAGE_NAME }}:arm
+    - name: Create architecture-specific manifests for both registries
+      run: |
+        # Function to create manifests for a registry
+        create_manifests() {
+          local registry=$1
+          local image_name=$2
+          
+          echo "Creating manifests for $registry/$image_name"
+          
+          # Create manifest for each architecture tag
+          docker manifest create $registry/$image_name:386 \
+            $registry/$image_name:386
+          
+          docker manifest create $registry/$image_name:x64 \
+            $registry/$image_name:x64
+          
+          docker manifest create $registry/$image_name:ppc64 \
+            $registry/$image_name:ppc64
+          
+          docker manifest create $registry/$image_name:armv7 \
+            $registry/$image_name:armv7
+          
+          docker manifest create $registry/$image_name:arm \
+            $registry/$image_name:arm
+
+          # Push manifests
+          docker manifest push $registry/$image_name:386
+          docker manifest push $registry/$image_name:x64
+          docker manifest push $registry/$image_name:ppc64
+          docker manifest push $registry/$image_name:armv7
+          docker manifest push $registry/$image_name:arm
+        }
+
+        # Create manifests for both registries
+        create_manifests "${{ env.REGISTRY_DOCKERHUB }}" "${{ env.DOCKERHUB_IMAGE_NAME }}"
+        create_manifests "${{ env.REGISTRY_QUAY }}" "${{ env.QUAY_IMAGE_NAME }}"
 
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [build-ghcr, build-dockerhub, verify]
+    needs: [build-ghcr, build-dockerhub-quay, verify]
     if: startsWith(github.ref, 'refs/tags/')
     
     steps:
@@ -304,7 +376,7 @@ jobs:
   summary:
     name: Build Summary
     runs-on: ubuntu-latest
-    needs: [build-ghcr, build-dockerhub, verify, scan]
+    needs: [build-ghcr, build-dockerhub-quay, verify, scan]
     if: always() && github.event_name != 'pull_request'
     
     steps:
@@ -312,7 +384,9 @@ jobs:
       run: |
         echo "🎉 Multi-architecture build completed!"
         echo ""
-        echo "📦 Docker Hub Tags Available:"
+        echo "📦 Available Registries and Tags:"
+        echo ""
+        echo "🚀 Docker Hub:"
         echo "   • garfieldwtf/cloudflare-ddns:latest    (multi-arch)"
         echo "   • garfieldwtf/cloudflare-ddns:386       (32-bit Intel/AMD)"
         echo "   • garfieldwtf/cloudflare-ddns:x64       (64-bit Intel/AMD)" 
@@ -320,10 +394,18 @@ jobs:
         echo "   • garfieldwtf/cloudflare-ddns:armv7     (ARMv7 devices)"
         echo "   • garfieldwtf/cloudflare-ddns:arm       (ARMv7 alias)"
         echo ""
-        echo "🏗️ GHCR Tags Available:"
+        echo "🔮 Quay.io:"
+        echo "   • quay.io/garfieldwtf/cloudflare-ddns:latest"
+        echo "   • quay.io/garfieldwtf/cloudflare-ddns:386"
+        echo "   • quay.io/garfieldwtf/cloudflare-ddns:x64"
+        echo "   • quay.io/garfieldwtf/cloudflare-ddns:ppc64"
+        echo "   • quay.io/garfieldwtf/cloudflare-ddns:armv7"
+        echo "   • quay.io/garfieldwtf/cloudflare-ddns:arm"
+        echo ""
+        echo "📚 GHCR (GitHub Container Registry):"
         echo "   • All tags including commits and branches"
         echo ""
         echo "🔍 Usage Examples:"
         echo "   docker pull garfieldwtf/cloudflare-ddns:386"
-        echo "   docker pull garfieldwtf/cloudflare-ddns:ppc64"
-        echo "   docker run --platform linux/386 garfieldwtf/cloudflare-ddns:386"
+        echo "   docker pull quay.io/garfieldwtf/cloudflare-ddns:ppc64"
+        echo "   docker run --platform linux/386 quay.io/garfieldwtf/cloudflare-ddns:386"
